--- a/Index.HTML
+++ b/Index.HTML
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style= "background-color:palevioletred ">
-<h1>welcome to the beginning of HTML! </h1>
-<h2>this will be a great journey</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae earum, quod illum quae animi facilis fuga, quos unde est sequi officiis saepe voluptate quisquam velit porro ea voluptatum minima ex.</p>
+<body style= "background-color:powderblue ">
+<h1>Natheeerah</h1>
+<h2>I am a full stack developer</h2>
+<p>Stay tuned to find out more about me</p>
 </body>
 </html>
